plugins {
    id 'java-library'
    id 'application'
    id "com.github.ben-manes.versions" version "0.42.0"
}

group 'org.svenehrke.example'
version '0.1.0'

mainClassName = 'App'

ext {
    jqwikVersion = '1.6.4'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.22'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation "net.jqwik:jqwik-api:${jqwikVersion}"
    testRuntimeOnly "net.jqwik:jqwik-engine:${jqwikVersion}"
    testImplementation 'org.testcontainers:testcontainers:1.16.3'
    testImplementation 'org.testcontainers:nginx:1.16.3'
}

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform {
//        includeEngines "jqwik"
        includeEngines 'jqwik', 'junit-jupiter'
//        includeEngines 'jqwik', 'junit-jupiter', 'junit-vintage'

        include '**/*Properties.class'
        include '**/*Test.class'
        include '**/*Tests.class'
    }
}

